kubernetes/08-easyshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyshop
  namespace: easyshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: easyshop
  template:
    metadata:
      labels:
        app: easyshop
    spec:
      containers:
        - name: easyshop
          image: manishvishwa801/easyshop-dhi:1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
